--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <div class="contact-item animate__animated animate__fadeInLeft">
                         <i class="fas fa-map-marker-alt"></i>
                         <h3>الموقع</h3>
-                        <p>موقع الكشافة - ندرومة</p>
+                        <p>موقع الكشافة - ندرومة (متاح أيضاً للدروس عن بعد)</p>
                     </div>
                     <div class="contact-item animate__animated animate__fadeInUp">
                         <i class="fas fa-phone"></i>
